--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "error-bearer",
   "version": "1.0.0",
-  "description": "Production-level custom errors in Typescript that you can throw",
+  "description": "A production-grade error creation library designed for Typescript",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
@@ -34,6 +34,26 @@
   },
   "author": "Theo Gravity <theo@suteki.nu>",
   "license": "MIT",
+  "keywords": [
+    "error",
+    "throw",
+    "custom",
+    "new",
+    "extends",
+    "factory",
+    "subclass",
+    "inherit",
+    "extension",
+    "create",
+    "typescript",
+    "serialize",
+    "collection",
+    "stack",
+    "trace",
+    "err",
+    "log",
+    "logging"
+  ],
   "bugs": {
     "url": "https://github.com/theogravity/error-bearer/issues"
   },
@@ -44,25 +64,25 @@
   },
   "devDependencies": {
     "@theo.gravity/changelog-version": "2.1.10",
-    "@theo.gravity/version-bump": "2.0.8",
-    "@types/jest": "25.2.1",
-    "@types/node": "^13.11.0",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "eslint": "6.8.0",
-    "git-commit-stamper": "^1.0.6",
-    "jest": "25.2.7",
-    "jest-cli": "25.2.7",
+    "@theo.gravity/version-bump": "2.0.9",
+    "@types/jest": "25.2.2",
+    "@types/node": "^14.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "eslint": "7.0.0",
+    "git-commit-stamper": "^1.0.9",
+    "jest": "^25.5.4",
+    "jest-cli": "26.0.1",
     "jest-junit-reporter": "1.1.0",
-    "lint-staged": "10.1.1",
+    "lint-staged": "10.2.2",
     "pre-commit": "1.2.2",
-    "prettier-standard": "16.2.1",
+    "prettier-standard": "16.3.0",
     "standardx": "^5.0.0",
     "toc-md-alt": "^0.3.2",
-    "ts-jest": "25.3.1",
-    "ts-node": "8.8.1",
+    "ts-jest": "25.5.1",
+    "ts-node": "8.10.1",
     "ts-node-dev": "1.0.0-pre.44",
-    "typescript": "3.8.3"
+    "typescript": "3.9.2"
   },
   "eslintConfig": {
     "parserOptions": {
