--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "new-error",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "A production-grade error creation and serialization library designed for Typescript",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -65,25 +65,25 @@
   },
   "devDependencies": {
     "@theo.gravity/changelog-version": "2.1.10",
-    "@theo.gravity/version-bump": "2.0.10",
-    "@types/jest": "26.0.14",
-    "@types/node": "^14.11.1",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
-    "eslint": "7.9.0",
+    "@theo.gravity/version-bump": "2.0.12",
+    "@types/jest": "26.0.20",
+    "@types/node": "^14.14.32",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
+    "eslint": "7.21.0",
     "git-commit-stamper": "^1.0.9",
-    "jest": "^26.4.2",
-    "jest-cli": "26.4.2",
+    "jest": "^26.6.3",
+    "jest-cli": "26.6.3",
     "jest-junit-reporter": "1.1.0",
-    "lint-staged": "10.4.0",
+    "lint-staged": "10.5.4",
     "pre-commit": "1.2.2",
     "prettier-standard": "16.4.1",
-    "standardx": "^5.0.0",
+    "standardx": "^7.0.0",
     "toc-md-alt": "^0.4.1",
-    "ts-jest": "26.4.0",
-    "ts-node": "9.0.0",
-    "ts-node-dev": "1.0.0-pre.62",
-    "typescript": "4.0.3"
+    "ts-jest": "26.5.3",
+    "ts-node": "9.1.1",
+    "ts-node-dev": "1.1.6",
+    "typescript": "4.2.3"
   },
   "eslintConfig": {
     "parserOptions": {
