--- a/package.json
+++ b/package.json
@@ -64,26 +64,26 @@
     "sprintf-js": "^1.1.2"
   },
   "devDependencies": {
-    "@theo.gravity/changelog-version": "2.1.10",
-    "@theo.gravity/version-bump": "2.0.12",
-    "@types/jest": "26.0.20",
-    "@types/node": "^14.14.32",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
-    "eslint": "7.21.0",
-    "git-commit-stamper": "^1.0.9",
-    "jest": "^26.6.3",
-    "jest-cli": "26.6.3",
+    "@theo.gravity/changelog-version": "2.1.11",
+    "@theo.gravity/version-bump": "2.0.14",
+    "@types/jest": "27.0.1",
+    "@types/node": "^16.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
+    "eslint": "7.32.0",
+    "git-commit-stamper": "^1.0.10",
+    "jest": "^27.0.6",
+    "jest-cli": "27.0.6",
     "jest-junit-reporter": "1.1.0",
-    "lint-staged": "10.5.4",
+    "lint-staged": "11.1.2",
     "pre-commit": "1.2.2",
-    "prettier-standard": "16.4.1",
+    "prettier-standard": "^16.4.1",
     "standardx": "^7.0.0",
-    "toc-md-alt": "^0.4.1",
-    "ts-jest": "26.5.3",
-    "ts-node": "9.1.1",
-    "ts-node-dev": "1.1.6",
-    "typescript": "4.2.3"
+    "toc-md-alt": "^0.4.2",
+    "ts-jest": "27.0.4",
+    "ts-node": "10.2.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "4.3.5"
   },
   "eslintConfig": {
     "parserOptions": {
